Disable Form-Not-Secure warning when |autofill_client_| is null

This is a temporary fix for an M57 crasher when Form-Not-Secure is
enabled.

PasswordAutofillManager doesn't generally seem to allow for the possibility that
|autofill_client_| is null, yet it's possible for it to be null, in the case of
the SimpleWebViewDialog ChromeOS captive portal login. In a follow-up, we should
figure out whether PasswordAutofillManager is intended to support a null
|autofill_client_| and also whether SimpleWebViewDialog is supposed to work
with password autofill.

BUG=678149
TBR=engedy@chromium.org

Review-Url: https://codereview.chromium.org/2733043005
Cr-Commit-Position: refs/heads/master@{#455213}

Former-commit-id: 88c753c103d76fd3697f7fcef962011588e3975f